<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:clickable="true"
    android:focusable="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/fromCurrencyLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/fromCurrencyBackground"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtBalanceInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/balance"
            android:textColor="@color/toCurrencyText"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/txtBalance"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnFromPrevious"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="&lt;"
            android:textColor="@color/toCurrencyText"
            android:textColorLink="@android:color/holo_blue_light"
            android:textSize="70sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnFromNext"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="&gt;"
            android:textColor="@color/toCurrencyText"
            android:textColorLink="@android:color/holo_blue_light"
            android:textSize="70sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtBalance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0 EUR"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/totalFeesPaidLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtBalance">

            <TextView
                android:id="@+id/txtTotalFeesPaidInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/feesPaidInTotal"
                android:textColor="@color/toCurrencyText"
                android:textSize="20sp"
                tools:layout_editor_absoluteX="232dp"
                tools:layout_editor_absoluteY="146dp" />

            <TextView
                android:id="@+id/txtTotalFeesPaidAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/toCurrencyText"
                android:textSize="20sp"
                tools:layout_editor_absoluteX="232dp"
                tools:layout_editor_absoluteY="146dp" />
        </LinearLayout>

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/toCurrencyLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/toCurrencyBackground"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline">

        <TextView
            android:id="@+id/txtConvertToInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/convertToCurrency"
            android:textColor="@color/toCurrencyText"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/txtToCurrency"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnToPrevious"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="&lt;"
            android:textColor="@color/toCurrencyText"
            android:textColorLink="@color/toCurrencyText"
            android:textSize="70sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnToNext"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="&gt;"
            android:textColor="@color/toCurrencyText"
            android:textColorLink="@color/toCurrencyText"
            android:textSize="70sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtToCurrency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="USD"
            android:textColor="@color/toCurrencyText"
            android:textSize="50sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6" />

    <LinearLayout
        android:id="@+id/amountToConvertLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/btnExchange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toCurrencyLayout">

        <TextView
            android:id="@+id/txtAmountToConvertInfo"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:text="@string/amountToConvert"
            android:textColor="@color/fromCurrencyBackground"
            android:textSize="24sp"
            tools:layout_editor_absoluteX="102dp"
            tools:layout_editor_absoluteY="456dp" />

        <EditText
            android:id="@+id/amountInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@color/enterAmount"
            android:ems="10"
            android:enabled="false"
            android:inputType="numberDecimal"
            android:paddingStart="5dp"
            android:singleLine="true"
            android:textColor="@color/fromCurrencyBackground"
            android:textColorLink="@color/fromCurrencyBackground"
            android:textSize="24sp"
            tools:layout_editor_absoluteX="62dp"
            tools:layout_editor_absoluteY="504dp" />
    </LinearLayout>

    <Button
        android:id="@+id/btnExchange"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@color/toCurrencyBackground"
        android:enabled="false"
        android:text="@string/exchange"
        android:textColor="@android:color/white"
        android:textColorLink="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toCurrencyLayout" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/exchangeResultLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/loadingBackground"
        android:visibility="gone">


        <LinearLayout
            android:id="@+id/exchangeResultContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="50dp"
            android:background="@drawable/exchange_container_background"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/convertedFromLayout"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="30dp"
                android:background="@android:color/white"
                android:gravity="center_vertical|center_horizontal"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:id="@+id/txtConvertedFromInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/convertedFromInfo"
                    android:textColor="@color/fromCurrencyBackground"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/txtConvertedFromAmount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/fromCurrencyBackground"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/convertedToLayout"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:background="@android:color/white"
                android:gravity="center_vertical|center_horizontal"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:id="@+id/txtConvertedToInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/convertedToInfo"
                    android:textColor="@color/fromCurrencyBackground"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/txtConvertedToAmount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/fromCurrencyBackground"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/commissionFeeLayout"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="30dp"
                android:background="@android:color/white"
                android:gravity="center_vertical|center_horizontal"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:id="@+id/txtCommissionFeeInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/commissionFeeInfo"
                    android:textColor="@color/fromCurrencyBackground"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/txtCommissionFeeAmount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/fromCurrencyBackground"
                    android:textSize="18sp" />
            </LinearLayout>

        </LinearLayout>

        <ImageButton
            android:id="@+id/btnCloseExchangeResult"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:background="@android:color/transparent"
            android:scaleType="fitXY"
            android:translationX="10dp"
            android:translationY="20dp"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/exchangeResultContainer"
            app:layout_constraintEnd_toEndOf="@+id/exchangeResultContainer"
            app:srcCompat="@drawable/exit" />

    </android.support.constraint.ConstraintLayout>

    <LinearLayout
        android:id="@+id/noConnectionLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/loadingBackground"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtLoadingInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@android:color/background_light"
            android:textSize="24sp" />

        <ImageButton
            android:id="@+id/btnRefresh"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginTop="40dp"
            android:background="@android:color/transparent"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/refresh" />

        <ImageButton
            android:id="@+id/btnExit"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="40dp"
            android:background="@android:color/transparent"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/exit" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>